versioned_docs/version-0.9.0/releases.mdx
---
id: releases
title: Releases
---

# Releases

import versions from "@site/static/files/0.9.0/versions.json"

This page provides the latest versions of all Drill4J components related to the 0.9.x release. Below, you'll find the release notes in reverse chronological order, along with changelogs and information on breaking changes.

## Current versions

<table>
  <thead>
    <tr>
      <th>Component</th>
      <th>Version</th>
      <th>Links</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td><a href="/docs/agents/java-agent">Application Agent</a></td>
      <td>{versions.applicationAgent}</td>
      <td>
        <a style={{fontSize: "14px"}}  href={`https://github.com/Drill4J/java-agent/releases/tag/v${versions.applicationAgent}`}> Release </a>
      </td>
    </tr>
    <tr>
      <td><a href="/docs/agents/test-agent">Test Agent</a></td>
      <td>{versions.testAgent}</td>
      <td>
        <a style={{fontSize: "14px"}}  href={`https://github.com/Drill4J/autotest-agent/releases/tag/v${versions.testAgent}`}> Release </a>
      </td>
    </tr>
    <tr>
      <td><a href="/docs/cicd-integration/cicd-integration-plugin">CI/CD Integration Plugin (Maven/Gradle)</a></td>
      <td>{versions.cicdPlugin}</td>
      <td>
        <a style={{fontSize: "14px"}} href={`https://central.sonatype.com/artifact/com.epam.drill.integration.cicd/com.epam.drill.integration.cicd.gradle.plugin/versions`}>Gradle Plugin</a>
        <br/>
        <a style={{fontSize: "14px"}} href={`https://central.sonatype.com/artifact/com.epam.drill.integration/drill-maven-plugin`}>Maven Plugin</a>
      </td>
    </tr>
    <tr>
      <td><a href="/docs/drill-services/drill-backend">Drill4J Backend</a></td>
      <td>{versions.adminBackend}</td>
      <td>
        <a style={{fontSize: "14px"}}  href="https://github.com/Drill4J/admin/pkgs/container/admin/versions">Github Container Registry</a>
        <br/>
    </td>
    </tr>
    <tr>
      <td><a href="/docs/drill-services/drill-ui">Drill4J UI</a></td>
      <td>{versions.ui}</td>
      <td><a style={{fontSize: "14px"}}  href="https://github.com/Drill4J/drill4j-ui/pkgs/container/drill4j-ui/versions">Github Container Registry</a></td>
    </tr>
    <tr>
      <td><a href="/docs/getting-started/metabase">Metabase dashboards</a></td>
      <td>{versions.metabaseDashboards}</td>
      <td><a style={{fontSize: "14px"}} href={`https://github.com/Drill4J/drill-metabase-dashboards/releases/tag/${versions.metabaseDashboards}`}>Release</a></td>
    </tr>
    
  </tbody>
</table>

## Releases

### Release Feb 26 2026

#### New Versions

- Drill4J Backend [0.9.24](https://github.com/Drill4J/admin/pkgs/container/admin/)
- Test Agent [0.23.11](https://github.com/Drill4J/autotest-agent/releases/tag/v0.23.11)
- Application Agent [0.9.20](https://github.com/Drill4J/java-agent/releases/tag/v0.9.20)
- CI/CD Integration Plugin 0.1.15 ([Maven](https://central.sonatype.com/artifact/com.epam.drill.integration/drill-maven-plugin), [Gradle](https://central.sonatype.com/artifact/com.epam.drill.integration.cicd/com.epam.drill.integration.cicd.gradle.plugin/versions))
- Metabase Dashboards [0.9.14](https://github.com/Drill4J/drill-metabase-dashboards/releases/tag/0.9.14)
- Drill4J UI [0.1.6](https://github.com/Drill4J/drill4j-ui/pkgs/container/drill4j-ui)

#### New Features & Improvements

- **ETL Processing Optimization**: Improved ETL processing performance to reduce overall refresh time and database load.

### Release Dec 1 2025

#### New Versions

- Drill4J Backend [0.9.21](https://github.com/Drill4J/admin/pkgs/container/admin/)
- Test Agent [0.23.10](https://github.com/Drill4J/autotest-agent/releases/tag/v0.23.10)
- Application Agent [0.9.15](https://github.com/Drill4J/java-agent/releases/tag/v0.9.15)
- CI/CD Integration Plugin 0.1.14 ([Maven](https://central.sonatype.com/artifact/com.epam.drill.integration/drill-maven-plugin), [Gradle](https://central.sonatype.com/artifact/com.epam.drill.integration.cicd/com.epam.drill.integration.cicd.gradle.plugin/versions))
- Metabase Dashboards [0.9.13](https://github.com/Drill4J/drill-metabase-dashboards/releases/tag/0.9.13)
- Drill4J UI [0.1.6](https://github.com/Drill4J/drill4j-ui/pkgs/container/drill4j-ui)

#### New Features & Improvements

- **Updating Metrics By ETL Process**: Implemented an ETL (Extract, Transform, Load) process to update metrics. This approach enhances performance and reduces the load on the primary database during metric calculations.
- **Enhanced Test Impact Analysis**: The algorithm for analyzing the impact of tests has been improved, which has significantly increased performance.

### Release Aug 15 2025

#### New Versions

- Drill4J Backend [0.9.16](https://github.com/Drill4J/admin/pkgs/container/admin/487713489?tag=0.9.16)
- Test Agent [0.23.8](https://github.com/Drill4J/autotest-agent/releases/tag/v0.23.8)
- Application Agent [0.9.9](https://github.com/Drill4J/java-agent/releases/tag/v0.9.9)
- CI/CD Integration Plugin 0.1.10 ([Maven](https://central.sonatype.com/artifact/com.epam.drill.integration/drill-maven-plugin), [Gradle](https://central.sonatype.com/artifact/com.epam.drill.integration.cicd/com.epam.drill.integration.cicd.gradle.plugin/versions))
- Metabase Dashboards [0.9.8](https://github.com/Drill4J/drill-metabase-dashboards/releases/tag/0.9.8)

#### New Features & Improvements

- **Faster Materialized View Refresh**: Significantly reduced the refresh time for materialized views. The refresh interval is now configurable via a Quartz CRON expression, e.g., `DRILL_SCHEDULER_REFRESH_VIEWS_JOB_CRON=0 0 * * * ?` (at the start of every hour).
- **Configurable Metrics Time Window**: Introduced a metrics time window for materialized views. It can be set using the `metricsPeriodDays` property in the `/api/group-settings` API.
- **Optional Test Tracing**: Added the ability to disable test tracing to reduce unnecessary data collection, for example, in unit tests.
- **Application Archive Scanning in Maven/Gradle**: Added a command to scan application archives (.jar, .war, .ear) and send class and method metadata to Drill4J before application startup.

### Release Jun 16 2025

#### New Versions

- Drill4J Backend [0.9.12](https://github.com/Drill4J/admin/pkgs/container/admin/371078861?tag=0.9.12)
- Metabase Dashboards [0.9.5](https://github.com/Drill4J/drill-metabase-dashboards/releases/tag/0.9.5)
- Test Agent [0.23.6](https://github.com/Drill4J/autotest-agent/releases/tag/v0.23.6)

### Release Mar 14 2025

#### New Versions

- Drill4J Backend [0.9.11](https://github.com/Drill4J/admin/pkgs/container/admin/371078861?tag=0.9.11)
- Metabase Dashboards [0.9.3](https://github.com/Drill4J/drill-metabase-dashboards/releases/tag/0.9.3)
- Test Agent [0.23.4](https://github.com/Drill4J/autotest-agent/releases/tag/v0.23.4)
- Application Agent [0.9.7](https://github.com/Drill4J/java-agent/releases/tag/v0.9.7)
- CI/CD Integration Plugin 0.1.7 ([Maven](https://central.sonatype.com/artifact/com.epam.drill.integration/drill-maven-plugin), [Gradle](https://central.sonatype.com/artifact/com.epam.drill.integration.cicd/com.epam.drill.integration.cicd.gradle.plugin/versions))

#### New Features & Improvements  

- **Optimized Metrics Calculation**: Significantly improved metrics calculation performance with a materialized view. Metric updates are now scheduled, and users can adjust the update interval using the [`DRILL_SCHEDULER_REFRESH_VIEWS_JOB_CRON`](https://drill4j.github.io/docs/drill-services/drill-backend#scheduler-configuration) environment variable.
- **Trend Analysis for Builds**: Introduces tracking of testing and coverage changes across multiple application versions, providing deeper insights into long-term testing trends.  
- **Recommended Tests**: Enables test recommendations via a CI/CD plugin for Gradle and Maven, as well as an API endpoint. Supports precise test selection based on tags and criteria. See more in the [Test Recommendations](https://drill4j.github.io/docs/cicd-integration/cicd-integration-plugin#test-recommendations) section.  
- **Test-Centric Metrics Dashboard**: Added a dedicated dashboard offering a deeper view into test sessions, launches, and corresponding metrics from the test suite perspective.
- **Metabase Dashboards Migration Image**:
  - Changed versioning schema from `v*` to `0.9.*` to match other Drill4J components
  - Created dedicated Docker image to supply migration for Metabase-based dashboards. Users no longer need to download migration files manually - the whole process is automated.
  - __WARNING__: all customizations to previously existing dashboards will be wiped upon update, as the tables are replaced before migration is applied. All Drill4J data and metrics are preserved. 

### Minor Release 4

__New Versions__:

- Application Agent [0.9.4](https://github.com/Drill4J/java-agent/releases/tag/v0.9.4)
- Test Agent [0.23.3](https://github.com/Drill4J/autotest-agent/releases/tag/v0.23.3)
- CI/CD Integration Plugin 0.1.6 ([Maven](https://central.sonatype.com/artifact/com.epam.drill.integration/drill-maven-plugin), [Gradle](https://central.sonatype.com/artifact/com.epam.drill.integration.cicd/com.epam.drill.integration.cicd.gradle.plugin/versions))
- Drill4J Backend [0.9.3](https://github.com/Drill4J/admin/pkgs/container/admin/298908511?tag=0.9.3)
- Metabase Dashboards [v20](https://github.com/Drill4J/drill-metabase-dashboards/releases/tag/v20)
- Drill4J UI [0.1.2](https://github.com/Drill4J/drill4j-ui/pkgs/container/drill4j-ui/305026431?tag=0.1.2)

__Notes__:

- PostgreSQL is updated to version 17

### Minor Release 3

__New Versions__:

- Application Agent 0.9.3
- CI/CD Integration Plugin 0.1.3

__Changelog__:
1. Application Agent - fixed Java 21 support issue associated with outdated ASM library
2. CI/CD Integration Plugin - allow setting GH_USER_TOKEN to increase download limits (affects Testing Agent and Application agent).
Refer to corresponding docs page for more information https://drill4j.github.io/docs/cicd-integration/cicd-integration-plugin

### Minor Release 2

__New Versions__:

- Admin Backend 0.9.1
- Application Agent 0.9.2
- Test Agent 0.23.2

__Breaking Changes:__

1. Application Agent: The `classScanDelay` parameter has been renamed to `scanClassDelay`.

__Changelog:__

1. __Application Agent & Test Agent__: Fixed issues related to unit test support.
2. __Test Agent__: Resolved a bug affecting Selenium 4 support.
3. __Admin Backend__: Updated DB schema for storing test results. Users can expect migrations to run automatically without any manual intervention.
4. __Documentation__: See updates below.

__New Documentation__

1. WildFly Integration Guide https://drill4j.github.io/docs/guides/wildfly
2. Tomcat Integration Guide https://drill4j.github.io/docs/guides/tomcat
3. Github Integration Guide
https://drill4j.github.io/docs/cicd-integration/github   
   > *Note: The GitHub integration guide assumes Drill4J core services are deployed, configured, and ready to accept data. Complementary documentation is currently being written.*

### Minor Release 1

Bugfix release

__New component versions:__

- Java Agent: 0.9.1
- Test Agent: 0.23.1
- CI/CD Integration Plugin: 0.1.1
 
__Changelist__

1. __Breaking Change__: Renamed agent parameters from `drillApiUrl` and `drillApiKey` to `apiUrl` and `apiKey`.

2. Fixed Issue: NPE crash when `-agentpath:<path-to-agent>` lacks `<options>`.

3. Realworld Demo - updated to work on Linux (addressed `unknown host "host.docker.internal"` error) and use new parameter names (Pull fresh version for latest fixes)

4. Updated Documentation: Reflects parameter name changes and newly released versions. 

As there are breaking changes associated with this release, make sure to update your configuration files accordingly.

### Release 0.9.0

Drill4J version 0.9.0 is out! 🚀

The release and documentation are still a work in progress, and breaking changes may occur. We'll be making updates and fixing bugs in the coming weeks.
You can let us know if you run into any problems using GitHub Issues (see the link below).

❗ We're dropping support for older versions (0.8.0-alpha and prior). Please consider using latest releases ❗

Links:
1. Release 0.9.0 documentation
https://drill4j.github.io/docs/what-is-drill4j
2. Demo
https://github.com/Drill4J/realworld-demo
3. Issues tracker
https://github.com/Drill4J/drill4j/issues
